kylin-display-switch (3.0.13kylin9) v101; urgency=medium

  * 设置“其他屏”后，代码获取其他屏的判断由主屏改为第一屏。

 -- hebing <hebing@kylinos.cn>  Wed, 17 Mar 2021 16:37:26 +0800

kylin-display-switch (3.0.13kylin8) v101; urgency=medium

  * kds界面不再显示显示器名称，仅显示显示器接口

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin7) v101; urgency=medium

  * 990与V10SP1同源

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin6~hw7) v101; urgency=medium

  * 更新主屏数据时同时考虑系统scale

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin6~hw6) v101; urgency=medium

  * 解决“其他屏”功能后，更新主屏数据（三屏情况待完善）

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin6~hw5) v101; urgency=medium

  * 解禁“其他屏”功能

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin6~hw4) v101; urgency=medium

  * 更改显示模式后调用usd接口更新主屏数据
  * 支持win+p切换选项

 -- hebing <hebing@kylinos.cn>  Thu, 04 Mar 2021 14:24:38 +0800

kylin-display-switch (3.0.13kylin6) v101; urgency=medium

  * 更改大小写锁定及小键盘锁定的初始状态获取方式

 -- hebing <hebing@kylinos.cn>  Tue, 02 Mar 2021 16:39:04 +0800

kylin-display-switch (3.0.13kylin5) v101; urgency=medium

  * 代码优化，通过修改宏定义控制选项数量

 -- hebing <hebing@kylinos.cn>  Fri, 26 Feb 2021 21:06:30 +0800

kylin-display-switch (3.0.12kylin5) v101; urgency=medium

  * KDS按下任意按键退出，屏蔽X86Display。

 -- hebing <hebing@kylinos.cn>  Thu, 25 Feb 2021 15:58:53 +0800

kylin-display-switch (3.0.12kylin4~hw4) v101; urgency=medium

  * 适配wayland下的主屏
  * lrelease kds.pro解决在990上的汉化问题

 -- hebing <hebing@kylinos.cn>  Thu, 25 Feb 2021 10:02:30 +0800

kylin-display-switch (3.0.12kylin4) v101; urgency=medium

  * 根据系统语言选择国际化文件

 -- hebing <hebing@kylinos.cn>  Sun, 07 Feb 2021 16:24:41 +0800

kylin-display-switch (3.0.12kylin3) v101; urgency=medium

  * 飞行模式返回的非全no非全yes状态由1改为0
  * 非勾选文字与勾选文字垂直对齐
