@@ -1,3 +1,9 @@
+kylin-display-switch (3.0.13kylin10) v101; urgency=medium
+
+  * 触发触摸板热键的同时更新gsettings
+
+ -- hebing <hebing@kylinos.cn>  Fri, 19 Mar 2021 17:24:24 +0800
+
 kylin-display-switch (3.0.13kylin9) v101; urgency=medium
 
   * 设置“其他屏”后，代码获取其他屏的判断由主屏改为第一屏。
